--- a/db/Taskfile.yaml
+++ b/db/Taskfile.yaml
@@ -1,11 +1,9 @@
 version: '3'
 
-vars:
-  REPO_MODE: n/a  # n/a, ro, rw
-
 tasks:
   images:
+    dir: postgres
     cmd: >-
       docker build .
       --file Dockerfile
-      --tag rolevod/db:latest
+      --tag rolevod/postgres:latest
