--- a/db/Taskfile.yaml
+++ b/db/Taskfile.yaml
@@ -1,9 +1,39 @@
 version: '3'
 
+vars:
+  REPO_MODE: n/a  # n/a, ro, rw
+  IMAGE: rolevod/db
+  CID:
+    sh: >-
+      find postgres -type f -exec md5sum {} +
+      | LC_ALL=C sort -k 2
+      | md5sum
+      | head -c 7
+
 tasks:
   images:
-    dir: postgres
+    status:
+      - docker image inspect {{.IMAGE}}:{{.CID}}
+    cmds:
+      - task: clean
+      - task: build
+        vars:
+          IMAGE_HOME: postgres
+
+  clean:
+    ignore_error: true
+    internal: true
+    cmds:
+      - docker container rm -fv $(docker ps -aq --filter=label=causality.key={{.IMAGE}}) &> /dev/null
+      - docker volume rm -f $(docker volume ls -q --filter label=causality.key={{.IMAGE}}) &> /dev/null
+      - docker image rm -f $(docker images -q --filter=label=causality.key={{.IMAGE}}) &> /dev/null
+
+  build:
+    internal: true
+    dir: "{{.IMAGE_HOME}}"
     cmd: >-
       docker build .
       --file Dockerfile
-      --tag rolevod/postgres:latest
+      --label causality.key={{.IMAGE}}
+      --tag {{.IMAGE}}:latest
+      --tag {{.IMAGE}}:{{.CID}}
