--- a/app/Taskfile.yaml
+++ b/app/Taskfile.yaml
@@ -17,29 +17,15 @@ tasks:
     cmd: go build -o rolevod main.go
 
   images:
-    # sources:
-    #   - ./**/*.go
-    #   - ../lib/**/*.go
-    #   - Dockerfile
     status:
       - docker image inspect {{.IMAGE}}:{{.CID}}
     cmds:
-      - task: clean
-      - task: build
-
-  clean:
-    ignore_error: true
-    internal: true
-    cmds:
-      - docker container rm -fv $(docker ps -aq --filter=label=causality.key={{.IMAGE}}) &> /dev/null
-      - docker volume rm -f $(docker volume ls -q --filter label=causality.key={{.IMAGE}}) &> /dev/null
-      - docker image rm -f $(docker images -q --filter=label=causality.key={{.IMAGE}}) &> /dev/null
-
-  build:
-    internal: true
-    cmd: >-
-      docker build ..
-      --file Dockerfile
-      --label causality.key={{.IMAGE}}
-      --tag {{.IMAGE}}:latest
-      --tag {{.IMAGE}}:{{.CID}}
+      - task: :image:clean
+        vars:
+          IMAGE_KEY: '{{.IMAGE}}'
+      - task: :image:build
+        vars:
+          IMAGE_KEY: '{{.IMAGE}}'
+          IMAGE_HOME: app
+          IMAGE_NAME: '{{.IMAGE}}'
+          IMAGE_TAG: '{{.CID}}'
