--- a/db/Taskfile.yaml
+++ b/db/Taskfile.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 vars:
   REPO_MODE: n/a  # n/a, ro, rw
-  IMAGE: rolevod/db
+  IMAGE: rolevod/postgres
   CID:
     sh: >-
       find postgres -type f -exec md5sum {} +
@@ -15,25 +15,12 @@ tasks:
     status:
       - docker image inspect {{.IMAGE}}:{{.CID}}
     cmds:
-      - task: clean
-      - task: build
+      - task: :image:clean
         vars:
-          IMAGE_HOME: postgres
-
-  clean:
-    ignore_error: true
-    internal: true
-    cmds:
-      - docker container rm -fv $(docker ps -aq --filter=label=causality.key={{.IMAGE}}) &> /dev/null
-      - docker volume rm -f $(docker volume ls -q --filter label=causality.key={{.IMAGE}}) &> /dev/null
-      - docker image rm -f $(docker images -q --filter=label=causality.key={{.IMAGE}}) &> /dev/null
-
-  build:
-    internal: true
-    dir: "{{.IMAGE_HOME}}"
-    cmd: >-
-      docker build .
-      --file Dockerfile
-      --label causality.key={{.IMAGE}}
-      --tag {{.IMAGE}}:latest
-      --tag {{.IMAGE}}:{{.CID}}
+          IMAGE_KEY: '{{.IMAGE}}'
+      - task: :image:build
+        vars:
+          IMAGE_KEY: '{{.IMAGE}}'
+          IMAGE_HOME: db/postgres
+          IMAGE_NAME: '{{.IMAGE}}'
+          IMAGE_TAG: '{{.CID}}'
