--- a/stack/product/compose.yaml
+++ b/stack/product/compose.yaml
@@ -22,7 +22,7 @@ services:
       timeout: 5s
       retries: 5
     labels:
-      causality.key: rolevod/postgres
+      image.key: rolevod/postgres
 
   database:
     image: rolevod/postgres:latest
@@ -45,7 +45,7 @@ services:
       -Downer.username=rolevod
       -Downer.password=rolevod
     labels:
-      causality.key: rolevod/postgres
+      image.key: rolevod/postgres
 
   schema:
     image: rolevod/postgres:latest
@@ -66,7 +66,7 @@ services:
       update
       -Dschema.name=rolevod
     labels:
-      causality.key: rolevod/postgres
+      image.key: rolevod/postgres
 
   app:
     image: rolevod/app:latest
@@ -78,5 +78,5 @@ services:
     ports:
       - "8080:8080"
     labels:
-      causality.key: rolevod/app
+      image.key: rolevod/app
  
