--- a/stack/product/compose.yaml
+++ b/stack/product/compose.yaml
@@ -6,6 +6,10 @@ networks:
     name: product
     external: false
 
+configs:
+  product:
+    file: application.yaml
+
 services:
   storage:
     image: postgres:alpine
@@ -77,6 +81,9 @@ services:
         condition: service_completed_successfully
     ports:
       - "8080:8080"
+    configs:
+      - source: product
+        target: /app/application.yaml
     labels:
       image.key: rolevod/app
  
