--- a/app/Taskfile.yaml
+++ b/app/Taskfile.yaml
@@ -20,7 +20,7 @@ tasks:
   process:
     aliases: [proc, run]
     cmds:
-      - go run github.com/jmattheis/goverter/cmd/goverter gen ./...
+      - go run github.com/jmattheis/goverter/cmd/goverter gen -g 'output:file ./generated.go' ./...
       - go run main.go
 
   image:
