Use variables format

--- a/app/Taskfile.yaml
+++ b/app/Taskfile.yaml
@@ -21,7 +21,8 @@ tasks:
     aliases: [proc, run]
     cmds:
       # -g 'useUnderlyingTypeMethods yes'
-      - go run github.com/jmattheis/goverter/cmd/goverter gen -g 'output:file ./generated.go' ./...
+      # -g 'output:file ./generated.go'
+      - go run github.com/jmattheis/goverter/cmd/goverter gen ./...
       - go run main.go
 
   image:
