Stumble upon lolli state

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -24,7 +24,7 @@ tasks:
     aliases: [cps]
     cmds:
       - task: db:images
-      - task: app:image
+      # - task: app:image
 
   solution:packages:
     aliases: [sps]
